# RPi_Clock_UI

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  clock_ui.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme_link.html  search.html  searchindex.js  tox.ini  usage.html
.doctrees/: clock_ui.doctree  environment.pickle  index.doctree  readme_link.doctree  usage.doctree
.github/workflows/: precommit.yml  test.yml
_modules/: index.html
_modules/clock_ui/: main.html
_sources/: index.rst.txt
_static/: documentation_options.js
clock_ui/: __init__.py  __main__.py  main.py
docs/source/: clock_ui.rst  conf.py  index.rst  modules.rst  readme_link.md  template_package.rst  template_package.stubby.rst  template_package.ui.rst  usage.rst
template_package/: __init__.py  __init__.pyi  __main__.py
template_package/stubby/: __init__.py  __init__.pyi  idk.py  idk.pyi
template_package/ui/: __init__.py  __init__.pyi  accepted_headers.py  accepted_headers.pyi
tests/: __init__.py  main_test.py
