[tool.poetry]
name = "clock_ui"
version = "0.1.0"
description = "A Template python package"
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Ozy-Viking/template"
documentation = "https://ozy-viking-template.readthedocs.io"
packages = [{include = "clock_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

# Extras for docs
sphinx = { version = "^5", optional = true }
myst-parser = { version = "^0.18.1", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true }

# Extras for development
mypy = { version = "^1.0.1", optional = true }
tox = { version = "^4.4.6", optional = true }
pytest = { version = "^7.2.1", optional = true }

[tool.poetry.group.dev]  # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[tool.poetry.extras]
docs = ['sphinx', 'myst-parser', 'sphinx-rtd-theme']
dev = ['mypy', 'tox', 'pytest']

[tool.poetry.scripts]
square = "clock_ui:main"

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/clock_ui'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
